# main

./: .env.example  .gitignore  .npmrc  App.tsx  GEMINI.md  README.md  index.css  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: build-rust.yml  deploy.yml
components/: About.tsx  Blog.tsx  Footer.tsx  Hero.tsx  Projects.tsx
locales/: en.ts  zh.ts
pages/: BlogList.tsx  BlogPost.tsx  Home.tsx  NotFound.tsx
rust-server/: Cargo.toml  Dockerfile  README.md
rust-server/debian/: eihr-blog-rs.service
rust-server/src/: main.rs
server/: index.js  package.json
server/posts/: copyright.md
server/posts/en/: 1.md
services/: blog.ts
worker/: .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
worker/posts/en/: copyright.md
worker/posts/zh/: 1.md
worker/scripts/: generate-posts.cjs
worker/src/: index.ts
